Wire up 'Show Union Jack Lines' button.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ ISO Overall Flatness Requirements:<br/>
 <label for="lightPosZ">Light position Z: </label>
 <input id="lightPosZ" type="range" value="-40" min="-200" max="0" step="any"/><br/>
 <br/>
-<input type="checkbox" id="showLines" name="showLines" />
+<input type="checkbox" id="showLines" name="showLines" checked/>
 <label for="showLines">Show Union Jack Lines</label><br/>
 <input type="checkbox" id="showHeatmap" name="showHeatmap" checked/>
 <label for="showHeatmap">Show Heatmap</label><br/>
