Split up the project into several different modules (will probably have a few more in the future).

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MoodyJS</title>
-  <script type="text/javascript" src="webgl-debug.js"></script>
-  <script type="text/javascript" src="moody.js"></script>
+  <script type="module" src="main.js"></script>
   <style>
     :root {
       --l1-color: #F44336;
