Fix rotations completely by using quaternions - add FPS display.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ ISO Overall Flatness Requirements:<br/>
 <label for="showHeatmap">Show Heatmap</label><br/>
 <input type="checkbox" id="lightingOn" name="lightingOn" checked/>
 <label for="lightingOn">Lighting On</label><br/>
+<div>FPS: <span id="fps"></span></div>
+<div>Avg FPS: <span id="avg"></span></div>
 <br/>
 <svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 500px">
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
