Do scale, translation, then rotation so that we always rotate around the table's origin. Also fix DBZ error when all values are the same.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <input type="number" placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5"/><br/><br/>
 <button type="button" id="createTables">Create Tables</button>&nbsp;
 <button type="button" id="fillTestData">Fill Test Data</button>
+<button type="button" id="fillZeroData">Fill Zero Data</button>
 <br/><br/>
 <label for="plateDiagonal">Surface plate diagonal length: </label>
 <input name="plateDiagonal" id="plateDiagonal" readonly/><br/>
