--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       --l8-color: #9C27B0;
     }
     table {
-      table-layout: fixed;
+      table-layout: auto;
       width: 50%;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-top: 1.25rem;
     }
     thead th:nth-child(1) {
       width: 4%;
@@ -50,165 +50,238 @@
       width: 12%;
     }
     th, td {
-      padding: 2px;
+      padding: 0.125rem;
     }
     tbody td {
       text-align: center;
     }
     input:user-invalid {
-      border: red solid 2px;
+      border: red solid 0.125rem;
     }
     #canvasContainer {
       resize: both;
       position: relative; 
       overflow: hidden;
-      width: 800px;
-      height: 600px;
-      min-width: 800px;
-      min-height: 600px;
+      width: 50rem;
+      height: 37.5rem;;
+      min-width: 50rem;
+      min-height: 37.5rem;
       display: none;
     }
-    .resize-handle {
+    .resizeHandle {
       position: absolute;
-      width: 13px;
-      height: 13px;
+      width: 0.8125rem;
+      height: 0.8125rem;
       background-color: #aaa;
-      border: 1px solid #555;
+      border: 0.0625rem solid #555;
     }
-    .resize-handle.top-left {
+    .resizeHandle.topLeft {
       top: 0;
       left: 0;
       cursor: nwse-resize;
     }
-    .resize-handle.top-right {
+    .resizeHandle.topRight {
       top: 0;
       right: 0;
       cursor: nesw-resize;
     }
-    .resize-handle.bottom-left {
+    .resizeHandle.bottomLeft {
       bottom: 0;
       left: 0;
       cursor: nesw-resize;
     }
-    .resize-handle.bottom-right {
+    .resizeHandle.bottomRight {
       bottom: 0;
       right: 0;
       cursor: nwse-resize;
+    }
+    /* This makes it so all the ASME grade text fields are aligned regardless of label size. */
+    .gradeLabel {
+      display: inline-block; 
+      width: 7.75rem;
+    }
+    .gradeInput {
+      margin-right: 1rem;
+    }
+    .gradesContainer {
+      display: flex; /* Use flexbox for side-by-side layout */
+      margin-top: 0.3125rem;
+    }
+    .gradesColumn {
+      flex: 1; /* Equal width for both columns */
+      margin: 0 1.25rem; /* Add some spacing between columns */
+    }
+    .overallFlatnessLabel {
+      display: inline-block; 
+      width: 9.875rem;
+    }
+    .topInputLabel {
+      display: inline-block; 
+      width: 9.375rem; 
+    }
+    .topInput {
+      display: inline-block; 
+      width: 6rem; 
+    }
+    .topComputedLabel {
+      display: inline-block; 
+      width: 12.8rem;
+    }
+    .lightLabel {
+      display: inline-block; 
+      width: 7.2rem;
+    }
+    .lightInput {
+      vertical-align: middle;
     }
   </style>
 </head>
 <body>
-<label for="plateHeight">Surface plate length: </label>
-<input type="number" placeholder="48" name="plateHeight" id="plateHeight" maxlength="5"/><br/>
-<label for="plateWidth">Surface plate width: </label>
-<input type="number" placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/><br/>
-<label for="reflectorFootSpacing">Reflector foot spacing: </label>
-<input type="number" placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5"/><br/><br/>
+<label for="plateHeight" class="topInputLabel">Surface plate length: </label>
+<input type="number" class="topInput" placeholder="48" name="plateHeight" id="plateHeight" maxlength="5"/><br/>
+<label for="plateWidth" class="topInputLabel">Surface plate width: </label>
+<input type="number" class="topInput" placeholder="72" name="plateWidth" id="plateWidth" maxlength="5"/><br/>
+<label for="reflectorFootSpacing" class="topInputLabel">Reflector foot spacing: </label>
+<input type="number" class="topInput" placeholder="4" name="reflectorFootSpacing" id="reflectorFootSpacing" maxlength="5"/><br/><br/>
 <button type="button" id="createTables">Create Tables</button>&nbsp;
 <button type="button" id="fillTestData">Fill Test Data</button>
 <button type="button" id="fillZeroData">Fill Zero Data</button>
 <br/><br/>
-<label for="plateDiagonal">Surface plate diagonal length: </label>
+<label for="plateDiagonal" class="topComputedLabel">Surface plate diagonal length: </label>
 <input name="plateDiagonal" id="plateDiagonal" readonly/><br/>
-<label for="diagonalInset">Diagonal inset: </label>
+<label for="diagonalInset" class="topComputedLabel">Diagonal inset: </label>
 <input name="diagonalInset" id="diagonalInset" readonly/><br/>
-<label for="numHorizontalStations">Number of Horizontal Stations: </label>
+<label for="numHorizontalStations" class="topComputedLabel">Number of Horizontal Stations: </label>
 <input name="numHorizontalStations" id="numHorizontalStations" readonly/><br/>
-<label for="numVerticalStations">Number of Vertical Stations: </label>
+<label for="numVerticalStations" class="topComputedLabel">Number of Vertical Stations: </label>
 <input name="numVerticalStations" id="numVerticalStations" readonly/><br/>
-<label for="numDiagonalStations">Number of Diagonal Stations: </label>
+<label for="numDiagonalStations" class="topComputedLabel">Number of Diagonal Stations: </label>
 <input name="numDiagonalStations" id="numDiagonalStations" readonly/><br/><br/>
-ASME Overall Flatness Requirements:<br/>
-<label for="gradeAA">Grade AA (µinch): </label>
-<input name="gradeAA" id="gradeAA" readonly/><br/>
-<label for="gradeA">Grade A (µinch): </label>
-<input name="gradeA" id="gradeA" readonly/><br/>
-<label for="gradeB">Grade B (µinch): </label>
-<input name="gradeB" id="gradeB" readonly/><br/><br/>
-ISO Overall Flatness Requirements:<br/>
-<label for="grade0">Grade 0 (µinch): </label>
-<input name="grade0" id="grade0" readonly/><br/>
-<label for="grade1">Grade 1 (µinch): </label>
-<input name="grade1" id="grade1" readonly/><br/>
-<label for="grade2">Grade 2 (µinch): </label>
-<input name="grade2" id="grade2" readonly/><br/>
-<label for="grade3">Grade 3 (µinch): </label>
-<input name="grade3" id="grade3" readonly/><br/><br/>
-<label for="overallFlatness">Overall flatness (µinch): </label>
-<input name="overallFlatness" id="overallFlatness" readonly/><br/>
+
+<label for="asmeGradeContainer" class="gradeContainerLabel">ASME Overall Flatness Requirements:</label><br/>
+
+<div class="gradesContainer" id="asmeGradeContainer">
+  <div class="gradeColumn">
+    <label for="gradeAAInches" class="gradeLabel">Grade AA (µinch):</label>
+    <input name="gradeAAInches" id="gradeAAInches" class="gradeInput" readonly/><br/>
+    <label for="gradeAInches" class="gradeLabel">Grade A (µinch):</label>
+    <input name="gradeAInches" id="gradeAInches" class="gradeInput" readonly/><br/>
+    <label for="gradeBInches" class="gradeLabel">Grade B (µinch):</label>
+    <input name="gradeBInches" id="gradeBInches" class="gradeInput" readonly/><br/>
+  </div>
+  <div class="gradeColumn">
+    <label for="gradeAAMetric" class="gradeLabel">Grade AA (µm):</label> 
+    <input name="gradeAAMetric" id="gradeAAMetric" class="gradeInput" readonly/><br/>
+    <label for="gradeAMetric" class="gradeLabel">Grade A (µm):</label>
+    <input name="gradeAMetric" id="gradeAMetric" class="gradeInput" readonly/><br/>
+    <label for="gradeBMetric" class="gradeLabel">Grade B (µm):</label>
+    <input name="gradeBMetric" id="gradeBMetric" class="gradeInput" readonly/><br/>
+  </div>
+</div>
+<br/>
+
+<label for="isoGradeContainer" class="gradeContainerLabel">ISO Overall Flatness Requirements:</label><br/>
+<div class="gradesContainer" id="isoGradeContainer">
+  <div class="gradeColumn">
+      <label for="grade0Inches" class="gradeLabel">Grade 0 (µinch):</label>
+      <input name="grade0Inches" id="grade0Inches" class="gradeInput" readonly/><br/>
+      <label for="grade1Inches" class="gradeLabel">Grade 1 (µinch):</label>
+      <input name="grade1Inches" id="grade1Inches" class="gradeInput" readonly/><br/>
+      <label for="grade2Inches" class="gradeLabel">Grade 2 (µinch):</label>
+      <input name="grade2Inches" id="grade2Inches" class="gradeInput" readonly/><br/>
+      <label for="grade3Inches" class="gradeLabel">Grade 3 (µinch):</label>
+      <input name="grade3Inches" id="grade3Inches" class="gradeInput" readonly/><br/>
+  </div>
+  <div class="gradeColumn">
+      <label for="grade0Metric" class="gradeLabel">Grade 0 (µm):</label> 
+      <input name="grade0Metric" id="grade0Metric" class="gradeInput" readonly/><br/>
+      <label for="grade1Metric" class="gradeLabel">Grade 1 (µm):</label> 
+      <input name="grade1Metric" id="grade1Metric" class="gradeInput" readonly/><br/>
+      <label for="grade2Metric" class="gradeLabel">Grade 2 (µm):</label> 
+      <input name="grade2Metric" id="grade2Metric" class="gradeInput" readonly/><br/>
+      <label for="grade3Metric" class="gradeLabel">Grade 3 (µm):</label> 
+      <input name="grade3Metric" id="grade3Metric" class="gradeInput" readonly/><br/>
+  </div>
+</div>
+<br/>
+
+<label for="overallFlatnessInch" class="overallFlatnessLabel">Overall flatness (µinch): </label>
+<input name="overallFlatnessInch" id="overallFlatnessInch" readonly/><br/>
+<label for="overallFlatnessMetric" class="overallFlatnessLabel">Overall flatness (µm): </label>
+<input name="overallFlatnessMetric" id="overallFlatnessMetric" readonly/><br/>
 <label for="zMultiplier">Height multiplier (default: 50,000x): </label>
 <input id="zMultiplier" type="range" value="50000" min="10000" max="100000" step="any" list="markers"/>
 <datalist id="markers">
   <option value="50000"></option>
 </datalist><br/><br/>
-<label for="lightPower">Light power: </label>
-<input id="lightPower" type="range" value="400" min="0" max="10000" step="any"/><br/>
-<label for="lightPosX">Light position X: </label>
-<input id="lightPosX" type="range" value="0" min="-100" max="100" step="any"/><br/>
-<label for="lightPosY">Light position Y: </label>
-<input id="lightPosY" type="range" value="0" min="-100" max="100" step="any"/><br/>
-<label for="lightPosZ">Light position Z: </label>
-<input id="lightPosZ" type="range" value="-40" min="-200" max="0" step="any"/><br/>
+<label for="lightPower" class="lightLabel">Light power: </label>
+<input id="lightPower" class="lightInput" type="range" value="400" min="0" max="10000" step="any"/><br/>
+<label for="lightPosX" class="lightLabel">Light position X: </label>
+<input id="lightPosX" class="lightInput" type="range" value="0" min="-100" max="100" step="any"/><br/>
+<label for="lightPosY" class="lightLabel">Light position Y: </label>
+<input id="lightPosY" class="lightInput" type="range" value="0" min="-100" max="100" step="any"/><br/>
+<label for="lightPosZ" class="lightLabel">Light position Z: </label>
+<input id="lightPosZ" class="lightInput" type="range" value="-40" min="-200" max="0" step="any"/><br/>
 <br/>
 <input type="checkbox" id="showLines" name="showLines" checked/>
 <label for="showLines">Show Union Jack Lines</label><br/>
 <input type="checkbox" id="showHeatmap" name="showHeatmap" checked/>
 <label for="showHeatmap">Show Heatmap</label><br/>
 <input type="checkbox" id="lightingOn" name="lightingOn" checked/>
-<label for="lightingOn">Lighting On</label><br/>
+<label for="lightingOn">Lighting On</label><br/><br/>
 <div>FPS: <span id="fps"></span></div>
 <div>Avg FPS: <span id="avg"></span></div>
 <br/>
-<svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 500px">
+<svg id="tableGraphic" preserveAspectRatio="xMaxYMid meet" style="visibility: hidden; max-width: 31.25rem">
   <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em"/>
   <rect id="insideRect" fill="white" stroke="black" stroke-width="0.01em"/>
   <g id="topStartingDiagonalLineGroup" stroke="var(--l1-color)" fill="var(--l1-color)" stroke-width="0.018em">
     <path id="topStartingDiagonalLine"/>
-    <text style="font-size: 3px; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
+    <text style="font-size: 0.1875rem; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
       <textPath href="#topStartingDiagonalLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="bottomStartingDiagonalLineGroup" stroke="var(--l2-color)" fill="var(--l2-color)" stroke-width="0.018em">
     <path id="bottomStartingDiagonalLine"/>
-    <text style="font-size: 3px; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
+    <text style="font-size: 0.1875rem; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
       <textPath href="#bottomStartingDiagonalLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="northPerimeterLineGroup" stroke="var(--l3-color)" fill="var(--l3-color)" stroke-width="0.018em">
     <path id="northPerimeterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central" dy="-0.055em">
+    <text style="font-size: 0.1875rem; dominant-baseline: central" dy="-0.055em">
       <textPath href="#northPerimeterLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="eastPerimeterLineGroup" stroke="var(--l4-color)" fill="var(--l4-color)"  stroke-width="0.018em">
     <path id="eastPerimeterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
+    <text style="font-size: 0.1875rem; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
       <textPath href="#eastPerimeterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="southPerimeterLineGroup" stroke="var(--l5-color)" fill="var(--l5-color)"  stroke-width="0.018em">
     <path id="southPerimeterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central;" dy="-0.07em">
+    <text style="font-size: 0.1875rem; dominant-baseline: central;" dy="-0.07em">
       <textPath href="#southPerimeterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="westPerimeterLineGroup" stroke="var(--l6-color)" fill="var(--l6-color)"  stroke-width="0.018em">
     <path id="westPerimeterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
+    <text style="font-size: 0.1875rem; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
       <textPath href="#westPerimeterLine" startOffset="75%">⮜</textPath>
     </text>
   </g>
   <g id="horizontalCenterLineGroup" stroke="var(--l7-color)" fill="var(--l7-color)"  stroke-width="0.018em">
     <path id="horizontalCenterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central;" dy="-0.055em">
+    <text style="font-size: 0.1875rem; dominant-baseline: central;" dy="-0.055em">
       <textPath href="#horizontalCenterLine" startOffset="25%">⮞</textPath>
     </text>
   </g>
   <g id="verticalCenterLineGroup" stroke="var(--l8-color)" fill="var(--l8-color)"  stroke-width="0.018em">
     <path id="verticalCenterLine"/>
-    <text style="font-size: 3px; dominant-baseline: central; writing-mode: vertical-lr"
+    <text style="font-size: 0.1875rem; dominant-baseline: central; writing-mode: vertical-lr"
         dx="0.045em">
       <textPath href="#verticalCenterLine" startOffset="25%">⮞</textPath>
     </text>
@@ -219,15 +292,15 @@ ISO Overall Flatness Requirements:<br/>
   <!--
   This is preliminary work on being able to resize the canvas from all corners but for now seems like more work than it's worth. We do keep the bottom-right resize
   handle currently because it makes the resize graphic more visible to the user.
-  <div class="resize-handle top-left"></div>
-  <div class="resize-handle top-right"></div>
-  <div class="resize-handle bottom-left"></div>
+  <div class="resizeHandle topLeft"></div>
+  <div class="resizeHandle topRight"></div>
+  <div class="resizeHandle bottomLeft"></div>
   -->
-  <div class="resize-handle bottom-right"></div>
+  <div class="resizeHandle bottomRight"></div>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="topStartingDiagonalTable" style="visibility: hidden; border: 3px solid var(--l1-color);">
+    <table id="topStartingDiagonalTable" style="visibility: hidden; border: 0.1875rem solid var(--l1-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -248,7 +321,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="bottomStartingDiagonalTable" style="visibility: hidden; border: 3px solid var(--l2-color);">
+    <table id="bottomStartingDiagonalTable" style="visibility: hidden; border: 0.1875rem solid var(--l2-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -269,7 +342,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="northPerimeterTable" style="visibility: hidden; border: 3px solid var(--l3-color);">
+    <table id="northPerimeterTable" style="visibility: hidden; border: 0.1875rem solid var(--l3-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -290,7 +363,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="eastPerimeterTable" style="visibility: hidden; border: 3px solid var(--l4-color);">
+    <table id="eastPerimeterTable" style="visibility: hidden; border: 0.1875rem solid var(--l4-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -311,7 +384,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="southPerimeterTable" style="visibility: hidden; border: 3px solid var(--l5-color);">
+    <table id="southPerimeterTable" style="visibility: hidden; border: 0.1875rem solid var(--l5-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -332,7 +405,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="westPerimeterTable" style="visibility: hidden; border: 3px solid var(--l6-color);">
+    <table id="westPerimeterTable" style="visibility: hidden; border: 0.1875rem solid var(--l6-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -353,7 +426,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="horizontalCenterTable" style="visibility: hidden; border: 3px solid var(--l7-color);">
+    <table id="horizontalCenterTable" style="visibility: hidden; border: 0.1875rem solid var(--l7-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
@@ -374,7 +447,7 @@ ISO Overall Flatness Requirements:<br/>
 </div>
 <div style="display: flex; flex-direction: row-reverse; align-items: center; justify-content: center;">
   <div style="flex: 10;">
-    <table id="verticalCenterTable" style="visibility: hidden; border: 3px solid var(--l8-color);">
+    <table id="verticalCenterTable" style="visibility: hidden; border: 0.1875rem solid var(--l8-color);">
       <thead>
       <tr>
         <th scope="col">Station No.</th>
