Remove debug logging, add comment for future work.

--- a/index.html
+++ b/index.html
@@ -339,8 +339,7 @@
     <rect id="outsideRect" x="0" y="0" fill="white" stroke="black" stroke-width="0.01em" />
     <rect id="insideRect" fill="white" stroke="black" stroke-width="0.01em" />
     <a href="#topStartingDiagonalTable">
-      <g id="topStartingDiagonalLineGroup" stroke="var(--l1-color)" fill="var(--l1-color)" stroke-width="0.018em"
-        cursor="pointer">
+      <g id="topStartingDiagonalLineGroup" stroke="var(--l1-color)" fill="var(--l1-color)" stroke-width="0.018em">
         <path id="topStartingDiagonalLine" />
         <use xlink:href="#topStartingDiagonalLine" stroke="transparent" fill="transparent" stroke-width="0.13em" />
         <text style="font-size: 0.1875rem; dominant-baseline: central" dx="-0.05em" dy="-0.05em">
